--- a/test/passa-states-test.yml
+++ b/test/passa-states-test.yml
@@ -2,18 +2,18 @@
 ---
 version: "0.6"
 states:
-- time: 18-03-2018, 18:20:12 CET
+- time: 25-03-2018, 22:37:59 CEST
   services:
   - name: vote_vote
     scale: 5
   vms:
-  - type: medium
+  - type: m1.small
     scale: 4
   - type: nano
     scale: 2
   name: state-with-6
   isodate: 2018-05-11T00:14:47+02:00
-- time: 13-03-2019, 18:20:12 CET
+- time: 20-03-2019, 21:37:59 CET
   services:
   - name: vote_vote
     scale: 1
@@ -24,7 +24,7 @@ states:
     scale: 3
   name: state-with-2
   isodate: 2018-05-11T00:19:47+02:00
-- time: 10-08-2019, 19:20:12 CEST
+- time: 17-08-2019, 22:37:59 CEST
   services:
   - name: vote_vote
     scale: 7
@@ -35,7 +35,7 @@ states:
     scale: 3
   name: state-with-7
   isodate: 2018-05-11T00:24:47+02:00
-- time: 07-01-2020, 18:20:12 CET
+- time: 14-01-2020, 21:37:59 CET
   services:
   - name: vote_db
     scale: 1
