remove time from state

--- a/test/passa-states-test.yml
+++ b/test/passa-states-test.yml
@@ -2,8 +2,7 @@
 ---
 version: "0.6"
 states:
-- time: 25-03-2018, 23:42:21 CEST
-  services:
+- services:
   - name: vote_vote
     scale: 5
   vms:
@@ -12,9 +11,8 @@ states:
   - type: nano
     scale: 2
   name: state-with-6
-  isodate: 2018-05-11T00:14:47+02:00
-- time: 20-03-2019, 22:42:21 CET
-  services:
+  isodate: 2018-03-28T03:12:41.206587813+02:00
+- services:
   - name: vote_vote
     scale: 1
   vms:
@@ -23,9 +21,8 @@ states:
   - type: nano
     scale: 3
   name: state-with-2
-  isodate: 2018-05-11T00:19:47+02:00
-- time: 17-08-2019, 23:42:21 CEST
-  services:
+  isodate: 2019-03-23T02:12:41.206587813+01:00
+- services:
   - name: vote_vote
     scale: 7
   vms:
@@ -34,9 +31,8 @@ states:
   - type: nano
     scale: 3
   name: state-with-7
-  isodate: 2018-05-11T00:24:47+02:00
-- time: 14-01-2020, 22:42:21 CET
-  services:
+  isodate: 2019-08-20T03:12:41.206587813+02:00
+- services:
   - name: vote_db
     scale: 1
   vms:
@@ -45,7 +41,7 @@ states:
   - type: nano
     scale: 3
   name: state-with-1
-  isodate: 2018-05-11T00:29:47+02:00
+  isodate: 2020-01-17T02:12:41.206587813+01:00
 provider:
   name: docker-swarm
   managerIP: 192.168.99.100
