--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -32,3 +32,15 @@
 [[constraint]]
   name = "gopkg.in/yaml.v2"
   version = "2.1.1"
+
+[[constraint]]
+  name = "k8s.io/api"
+  version = "kubernetes-1.9.0"
+
+[[constraint]]
+  name = "k8s.io/apimachinery"
+  version = "kubernetes-1.9.0"
+
+[[constraint]]
+  name = "k8s.io/client-go"
+  version = "6.0.0"
