--- a/passa-states.yml
+++ b/passa-states.yml
@@ -3,7 +3,7 @@ provider:
   managerIP: 192.168.99.100
 
 provider:
-  name: docker-swarm
+  name: lrz
   username: ${LRZ_USERNAME}
   password: ${LRZ_PASSWORD}
   configFile: /Users/atakanyenel/Desktop/Computer_Science/go/src/github.com/Cloud-Pie/Passa/test/admin.conf
@@ -13,7 +13,10 @@ states:
 - isodate: 2018-04-22T12:54:16.722357636+02:00
   name: state-with-6
   services:
-    relax_web: 5  
+    relax_web:
+        cpu: 100
+        memory: 200
+        replicas: 3
   vms:
     m1.small: 2
     m1.nano: 1
@@ -22,7 +25,10 @@ states:
 - isodate: 2018-04-22T12:54:16.722357636+02:00
   name: state-with-2
   services:
-    relax_web: 2
+    relax_web:
+      cpu: 300
+      memory: 400
+      replicas: 2
   vms:
     m1.small: 3
     m1.nano: 4
