--- a/passa-states.yml
+++ b/passa-states.yml
@@ -84,13 +84,16 @@ states:
     m1.small: 3
     m1.nano: 4
 
-- isodate: 2018-10-21T09:20:16.722357636+02:00
+  isodate: 2018-10-21T09:20:16.722357636+02:00
   name: Scaling-State
   services:
     nginx:
       cpu: 100mi
       memory: 2000000000
       replicas: 20
+    php-apache:
+      replicas: 2
   vms:
     t2.micro: 3
     t2.large: 4
+    t2.medium: 0
